:rotating_light: (*) prettier lint

--- a/src/popup/EventPlayer/styles.scss
+++ b/src/popup/EventPlayer/styles.scss
@@ -1,15 +1,19 @@
 details > summary {
-    list-style-type: none;
+  list-style-type: none;
 }
+
 details > summary::-webkit-details-marker {
-    display: none;
+  display: none;
 }
+
 details > summary::before {
-    content: '️🔽';
+  content: "️🔽";
 }
+
 details[open] > summary::before {
-    content: '🔼';
+  content: "🔼";
 }
+
 details {
   cursor: pointer;
 }
